2015-09-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README: Mention tests under tp/tests.  Remove "texinfo/" 
	from start of a path.
	* tp/tests/README: Change a word "one" to "a".  Add headings
	"Regenerating test results" and "Checking test results".  Add an 
	example to show how to investigate a test failure.  Change 
	"content" to "contents" and "files" to "file", and "line 
	oriented" to "line-oriented".

	* tp/t/tests/test_scripts/layout_formatting_regions.sh: Update 
	results for this "long-checks" test (more to come).

2015-09-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search)
	(window_set_state, window_get_state): Refer to nodes by their 
	filename and nodename instead of with a NODE object.
	(window_set_state): Use info_set_node_of_window instead of 
	window_set_node_of_window, in order to put the node in the 
	window history.
	(incremental_search): Call cleanup_history to adjust the 
	window's history at the end of the incremental search.
	(cleanup_history): Null final entry in history array.

	* info/t/inc-sea-bs-after-strip-cr.sh: New test.

2015-09-24  Vincent Belaïche  <vincent.belaiche@gmail.com>

	* util/texi2dvi: Exempt msys as well as cygwin from using 
	semicolon as a path separator.
	(list_concat_dirs, absolute_filenames): Replace a literal colon 
	with an expansion of a variable.

2015-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi (generated_files_get): Print a warning if the
	filename recorder is used along with an index file with an "fl"
	extension.
	(input_file_name_decode): Comment tweaked.

2015-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi (comment_iftex, uncomment_iftex): Move in file 
	closer to where they are used.

2015-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* util/texi2dvi (generated_files_get_from_fls): Avoid exiting 
	script with 'set -e' if file list is empty.

2015-09-23  Gavin Smith  <gavinsmith0123@gmail.com>
